# rhino-diffusion

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: train_base_config.yaml  train_base_ddim.yaml  train_base_gt_data.yaml  train_ref_config.yaml
configs/ddim/: train_ddim_unet_ffhq_256.yaml
configs/jit/: train_ffhq_128.yaml
configs/ldm/: train_ldm_ddim_dit_ffhq_256.yaml  train_ldm_unet_ffhq_256.yaml
configs/sr3/: train_base_sr3.yaml  train_sr3_dit_repa_base_ffhq_32_256.yaml  train_sr3_jit_ffhq_32_256.yaml  train_sr3_unet_ffhq_32_256.yaml  train_sr3_unet_ldm_ffhq_32_256.yaml
rhdiffusion/boat/: base_diffusion_boat.py  latent_diffusion_boat.py  sr3_diffusion_boat.py
rhdiffusion/boats/: base_diffusion_boat.py  conditioned_diffusion_boat.py  conditioned_latent_diffusion_boat.py  jit_boat.py  jit_sr3_boat.py  latent_diffusion_boat.py  sr3_diffusion_boat.py
rhdiffusion/nn/model_zoo/dit/: dit.py  dit_modules.py  dit_utils.py
rhdiffusion/nn/model_zoo/jit/: default_archs.py  generator.py  modules.py  (+1 more)
rhdiffusion/nn/utils/: item_to_list.py
rhdiffusion/nn/wrappers/: autoencoder_kl_wrapper.py  dit_2d_flexible_wrapper.py  unet_2d_flexible_wrapper.py
rhdiffusion/samplers/: ddim_sampler.py  flow_matching_solver.py  jit_solver.py
rhdiffusion/schedulers/: ddim_scheduler.py  ddpm_scheduler.py
rhdiffusion/solvers/: sampling_ddim.py  solving_rfm.py
rhino_diffusion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
run_scripts/: train_ddim_unet.py  train_jit.py  train_jit_sr3.py  train_latent_sr3.py  train_ldm_ddim_dit.py  train_ldm_unet.py
(+4 files in other folders)
